realign MLIR bindings to use Alex/XParsec properly; update Firefly error return type handling

--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -89,6 +89,8 @@
       <Compile Include="Alex/Bindings/Time/MacOS.fs" />
       <Compile Include="Alex/Bindings/Time/Windows.fs" />
       <Compile Include="Alex/Bindings/Time/TimeBindings.fs" />
+      <Compile Include="Alex/Bindings/Console/Linux.fs" />
+      <Compile Include="Alex/Bindings/Console/ConsoleBindings.fs" />
 
       <!-- Alex Traversal -->
       <Compile Include="Alex/Traversal/PSGZipper.fs" />
@@ -100,12 +102,14 @@
       <!-- Alex CodeGeneration (depends on Traversal) -->
       <Compile Include="Alex/CodeGeneration/EmissionMonad.fs" />
 
+      <!-- Alex Pipeline Types (needed by Emission for error collection) -->
+      <Compile Include="Alex/Pipeline/CompilationTypes.fs" />
+
       <!-- Alex Emission -->
       <Compile Include="Alex/Emission/ExpressionEmitter.fs" />
       <Compile Include="Alex/Emission/FunctionEmitter.fs" />
 
-      <!-- Alex Pipeline - Minimal for current architecture -->
-      <Compile Include="Alex/Pipeline/CompilationTypes.fs" />
+      <!-- Alex Pipeline Orchestration -->
       <Compile Include="Alex/Pipeline/CompilationOrchestrator.fs" />
 
       <!-- CLI Infrastructure -->
