--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -88,6 +88,7 @@
       <!-- Alex Traversal -->
       <Compile Include="Alex/Traversal/PSGZipper.fs" />
       <Compile Include="Alex/Traversal/PSGXParsec.fs" />
+      <Compile Include="Alex/Traversal/PSGScribe.fs" />
 
       <!-- Alex Patterns -->
       <Compile Include="Alex/Patterns/PSGPatterns.fs" />
