--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -50,6 +50,8 @@
       <Compile Include="Core/PSG/Nanopass/ReducePipeOperators.fs" />
       <Compile Include="Core/PSG/Nanopass/ReduceAlloyOperators.fs" />
       <Compile Include="Core/PSG/Nanopass/DefUseEdges.fs" />
+      <Compile Include="Core/PSG/Nanopass/ConstantPropagation.fs" />
+      <Compile Include="Core/PSG/Nanopass/LowerStringLength.fs" />
       <Compile Include="Core/PSG/Nanopass/ParameterAnnotation.fs" />
       <Compile Include="Core/PSG/Nanopass/ClassifyOperations.fs" />
       <Compile Include="Core/PSG/Nanopass/LowerInterpolatedStrings.fs" />
@@ -98,10 +100,12 @@
       <!-- Alex Traversal -->
       <Compile Include="Alex/Traversal/PSGZipper.fs" />
       <Compile Include="Alex/Traversal/PSGXParsec.fs" />
-      <!-- PSGScribe removed - violated layer separation (see docs/Native_Library_Binding_Architecture.md) -->
 
       <!-- Alex Patterns -->
       <Compile Include="Alex/Patterns/PSGPatterns.fs" />
+
+      <!-- Alex Generation (uses Zipper + XParsec + Patterns) -->
+      <Compile Include="Alex/Traversal/PSGGeneration.fs" />
 
       <!-- Alex Pipeline Types -->
       <Compile Include="Alex/Pipeline/CompilationTypes.fs" />
