clean up PSG zipper

--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -47,8 +47,9 @@
       <!-- PSG Nanopass (small, single-purpose transformations) -->
       <Compile Include="Core/PSG/Nanopass/IntermediateEmission.fs" />
       <Compile Include="Core/PSG/Nanopass/ProvisionalCallGraph.fs" />
+      <Compile Include="Core/PSG/Nanopass/ExtractSRTPEdges.fs" />
 
-      <!-- Reachability (must come after ProvisionalCallGraph) -->
+      <!-- Reachability (must come after ProvisionalCallGraph and ExtractSRTPEdges) -->
       <Compile Include="Core/PSG/Reachability.fs" />
       <Compile Include="Core/PSG/Nanopass/FlattenApplications.fs" />
       <Compile Include="Core/PSG/Nanopass/ReducePipeOperators.fs" />
